--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="navbar">
       <a>Ahmad Ghzayel</a>
       <nav>
         <ul>
           <li><a href="About">About</a></li>
           <li><a href="Resume">Resume</a></li>
           <li><a href="Projects">projects</a></li>
-          <li><a href="Stats">stats</a></li>
-          <li><a href="Contatct">contact</a></li>
+          <li><a href="stats.html">stats</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
