--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </nav>
     </header>
     <div class="container">
-      <div class="left">
-        <div class="top">
+      <div class="container_left_content">
+        <div class="top_info_header">
           <img src="https://mldangelo.com/images/me.jpg" />
           <h1>Ahmad Ghzayel</h1>
           <h5>ahmad@gmail.com</h5>
@@ -44,12 +44,12 @@
           <hr />
         </div>
       </div>
-      <div class="right">
+      <div class="right_content">
         <div class="topright">
           <h1>About me</h1>
           <p>(in about 1074 words)</p>
         </div>
-        <div class="bodyright">
+        <div class="body_right">
           <h1>Intro</h1>
           <p>
             I am the co-founder and CTO of Promptfoo, where we're building
@@ -63,7 +63,7 @@
             to you or your cause, or if you're interested in collaborating, feel
             free to get in touch.
           </p>
-          <div class="nextdiv">
+          <section class="history">
             <h1 class="">Some History</h1>
             <ol>
               <li>
@@ -105,7 +105,7 @@
                 first DRSSTCs.
               </li>
             </ol>
-          </div>
+          </section>
         </div>
       </div>
     </div>
