--- a/stats.html
+++ b/stats.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
+    <section class="container">
       <div class="main_information">
         <div class="top">
           <img src="https://mldangelo.com/images/me.jpg" />
@@ -37,7 +37,7 @@
           <h5>ahmad@gmail.com</h5>
         </div>
         <hr />
-        <div class="aboutme">
+        <div class="about_me">
           <h1>About</h1>
           <p>
             Hi, I'm Michael. I am a Stanford ICME graduate, YC alumnus, and the
@@ -111,6 +111,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
